--- a/configs/base_expe.yaml
+++ b/configs/base_expe.yaml
@@ -5,5 +5,6 @@ all_targets:
     - "hardness"
     - "elongation"
     - "reduc_area"
+    - "ult_tens_str"
 cleaned_data_path: "output/data/welddb.csv"
 task: "regression"
